--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,14 @@
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title><%= htmlWebpackPlugin.options.title %></title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
-	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@400&family=Source+Code+Pro:wght@400&display=swap" rel="stylesheet">
+	  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	  <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@400&family=Source+Code+Pro:wght@400&display=swap" rel="stylesheet">
+
+    <style>
+      body {
+    		background-color: #1e1e1e;
+	    }
+    </style>
   </head>
   <body>
     <noscript>
